fix(trading.css): add border to product buttons for improved visibility

--- a/pages/assets/css/trading/trading.css
+++ b/pages/assets/css/trading/trading.css
@@ -118,6 +118,7 @@
     right: 15px;
     z-index: 3;
     background-color: #e2c8a5;
+    border: 2px solid #948169;
     color: #0A1215;
     padding: 5px 10px;
     font-size: 0.9em;
